<resources>
    <string name="app_name">قرائت کنتور</string>
    <string name="navigation_drawer_open">باز کردن منو</string>
    <string name="navigation_drawer_close">بستن منو</string>
    <string name="services_is_not_available">سرویس در دسترس  نیست</string>
    <string name="canceled">عملیات متوقف شد.</string>
    <string name="waiting">لطفا صبر کنید…</string>
    <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
    <string name="cache_folder">responses</string>
    <string name="camera_folder">/AbfaCamera/</string>
    <string name="audio_folder">/AbfaAudioRecord/</string>
    <string name="save_format_name">yyyyMMdd_HHmmss</string>
    <string name="save_format_name_melli">yyyyMMdd_HHmmss_SSS</string>
    <string name="copy_right">شبکه تارنما سپاهان</string>
    <string name="version">نسخه</string>
    <string name="username">نام کاربری</string>
    <string name="password">گذرواژه</string>
    <string name="login">ورود</string>
    <string name="save">ذخیره</string>
    <string name="error_upload">بارگذاری با خطا رو برو شد.</string>
    <string name="error_not_auth">مجوزهای دسترسی شما باطل شده،از برنامه خارج و مجددا وارد شوید. در صورت عدم رفع مشکل با پشتیبان تماس بگیرید.</string>
    <string name="error_connection">خطا در جابجایی اطلاعات، اتصالات خود را بررسی و مجدد تلاش کنید.</string>
    <string name="error_external_storage_is_not_writable">حافظه خارجی قابلی نوشتن نیست.</string>
    <string name="error_in_record_voice">در ضبط صدا مشکلی به وجود آمد</string>
    <string name="error_in_play_voice">در پخش صدا مشکلی به وجود آمد</string>
    <string name="dear_user">همکار گرامی!</string>
    <string name="error_other">خدمات فعلا مقدور نمیباشد، لحظاتی دیگر مجددا تلاش فرمایید.</string>
    <string name="error_internal">خطای سرور، لحظاتی دیگر امتحان فرمایید.</string>
    <string name="error_change_server">خطای سرور، منتظر بمانید و در صورت برطرف نشدن مشکل با پشتیبان تماس حاصل فرمایید.</string>
    <string name="error_empty">این فیلد باید پر شود.</string>
    <string name="error_format">فرمت وارد شده صحیح نمیباشد.</string>
    <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>
    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="no_eshterak_found">اشتراک فعالی وجود ندارد</string>
    <string name="eshterak">اشتراک</string>
    <string name="accepted">ادامه</string>
    <string name="confirm">تایید</string>
    <string name="ok">ثبت</string>
    <string name="dont_show_again">دیگر نمایش نده</string>
    <string name="home">خانه</string>
    <string name="upload_information">بارگذاری اطلاعات</string>
    <string name="upload">بارگذاری</string>
    <string name="reading">قرائت</string>
    <string name="download_information">بارگیری اطلاعات</string>
    <string name="download">بارگیری</string>
    <string name="reading_report">گزارش قرائت</string>
    <string name="location">مکان یابی</string>
    <string name="help">راهنما</string>
    <string name="reading_setting">تنظیمات قرائت</string>
    <string name="app_setting">تنظیمات برنامه</string>
    <string name="exit">خروج</string>
    <string name="how_to_exit">جهت خروج، از فهرست، گزینه «خروج» را بزنید.</string>
    <string name="team">شبکه تارنما سپاهان</string>
    <string name="sepehr_shamsaei">سپهر شمسایی</string>
    <string name="email">ایمیل</string>
    <string name="email_tarnama">infotarnama@gmail.com</string>
    <string name="update_date">تاریخ به روزرسانی</string>
    <string name="date_custom">1399/08/08</string>
    <string name="version_custom">1.0.1.1</string>
    <string name="sepehr_phone">09357366741</string>
    <string name="design_by">طراحی و پیاده سازی</string>
    <string name="website">وب سایت</string>
    <string name="start">شروع</string>
    <string name="_0">0</string>
    <string name="send">ارسال</string>
    <string name="description">توضیحات</string>
    <string name="distribution">توزیع قبض</string>
    <string name="normal">عادی</string>
    <string name="off_line">آفلاین</string>
    <string name="special">ویژه</string>
    <string name="again">مجدد</string>
    <string name="upload_off">بارگذاری آفلاین</string>
    <string name="multimedia">چندرسانه</string>
    <string name="upload_multimedia">بارگذاری تصاویر</string>
    <string name="upload_message">بارگذاری پیام ها</string>
    <string name="layers">لایه ها</string>
    <string name="location_counter">محل کنتور</string>
    <string name="submit">ثبت</string>
    <string name="distance_from_input">فاصله از نقطه ورود</string>
    <string name="cm">cm</string>
    <string name="slash">/</string>
    <string name="meter">m</string>
    <string name="distance_from_left">فاصله از دیوار سمت چپ</string>
    <string name="pre_date">تاریخ قبلی</string>
    <string name="branch_radius">قطر انشعاب</string>
    <string name="siphon_radius">قطر سیفون</string>
    <string name="insert_information">ورود اطلاعات</string>
    <string name="search">جستجو</string>
    <string name="close">بستن</string>
    <string name="support">پشتیبانی</string>
    <string name="delete">حذف</string>
    <string name="is_high">رقم وارد شده بالاتر از میانگین بلند مدت است. آیا از رقم وارد شده اطمینان دارید؟</string>
    <string name="change_theme">تغییر پوسته</string>
    <string name="change_password">تغییر گذرواژه</string>
    <string name="update">بروزرسانی</string>
    <string name="pre_password">گذرواژه پیشین</string>
    <string name="new_password">گذرواژه جدید</string>
    <string name="repeat_new_password">تکرار گذرواژه جدید</string>
    <string name="green">سبز</string>
    <string name="light_blue">آبی کم رنگ</string>
    <string name="blue">آبی</string>
    <string name="dark">تیره</string>
    <string name="new_possibilities">امکانات جدید</string>
    <string name="apk_size">حجم فایل</string>
    <string name="receive_file">دریافت فایل</string>
    <string name="sending_setting">تنظیمات ارسال</string>
    <string name="delete_data">حذف داده ها</string>
    <string name="temporary">علی الحساب</string>
    <string name="not_read">قرائت نشده</string>
    <string name="total_statistic">آمار کلی</string>
    <string name="down">پایین </string>
    <string name="up">بالا </string>
    <string name="zero">صفر </string>
    <string name="total_number">تعداد کل</string>
    <string name="not_reading_number">تعداد قرائت نشده</string>
    <string name="continue_reading">ادامه قرائت</string>
    <string name="temporary_number">تعداد علی الحساب</string>
    <string name="data_not_found">داده ای یافت نشد</string>
    <string name="navigation">پیمایش</string>
    <string name="account">اشتراک</string>
    <string name="phone_number">تلفن ثابت</string>
    <string name="mobile_number">تلفن همراه</string>
    <string name="counter_serial">شماره سریال کنتور</string>
    <string name="address">نشانی</string>
    <string name="empty">&#160;خالی از سکنه</string>
    <string name="show">نمایش&#160;</string>
    <string name="number">تعداد&#160;</string>
    <string name="reports">گزارشات</string>
    <string name="report_forbid">گزارش غیرمجاز</string>
    <string name="previous_account">اشتراک قبلی</string>
    <string name="next_account">اشتراک بعدی</string>
    <string name="attach_image">الصاق عکس</string>
    <string name="theme_changed">تغییر پوسته با موفقیت انجام گرفت</string>
    <string name="camera">دوربین</string>
    <string name="gps_setting">تنظیمات جی پی اس</string>
    <string name="setting">تنظیمات</string>
    <string name="allow_permission">اعطای دسترسی</string>
    <string name="permission_not_completed">مجوزها کامل نیست، پس از اعطای دسترسی کامل، مجددا تلاش کنید.</string>
    <string name="active_gps">مکان یابی شما غیر فعال است، با مراجعه به تنظیمات، آن را فعال کنید.</string>
    <string name="confirm_permission">جهت استفاده از برنامه مجوزهای پیشنهادی را قبول فرمایید</string>
    <string name="if_reject_permission">در صورت رد این مجوز قادر به استفاده از این دستگاه نخواهید بود\nلطفا با فشار دادن دکمه اعطای دسترسی و سپس در بخش دسترسی ها با این مجوز ها موافقت نمایید</string>
    <string name="access_granted">مجوز ها داده شده</string>
    <string name="has_no_flash">دستگاه شما مجهز به چراغ قوه نیست</string>
    <string name="choose_document">انتخاب مدرک</string>
    <string name="select_source">تصویر را از کجا انتخاب میکنید؟</string>
    <string name="gallery">گالری</string>
    <string name="save_send">ذخیره و ارسال</string>
    <string name="active_network">اینترنت شما غیر فعال است، با مراجعه به تنظیمات، آن را فعال کنید.</string>
    <string name="network_setting">تنظیمات اینترنت</string>
    <string name="google_is_not_available">سرویس های گوگل برای شما در دسترس نیست.</string>
    <string name="google_is_available_but_not_installed">سرویس های گوگل در دسترس است، گوگل پلی نصب را نصب کنید.</string>
    <string name="use_out_of_range">مصرف خارج از بازه</string>
    <string name="less_than_pre">رقم فعلی کمتر از رقم پیشین است.</string>
    <string name="counter_empty">رقم کنتور وارد نشده است.</string>
    <string name="zero_use">مصرف صفر است. آیا اطمینان دارید؟</string>
    <string name="high_use">رقم وارد شده بالاتر از میانگین بلند مدت است. آیا از رقم وارد شده اطمینان دارید؟</string>
    <string name="low_use">رقم وارد شده پایین تر از میانگین بلند مدت است. آیا از رقم وارد شده اطمینان دارید؟</string>
    <string name="counter_body_number">شماره بدنه کنتور</string>
    <string name="page_number">شماره صفحه</string>
    <string name="name">نام</string>
    <string name="barcode">بارکد</string>
    <string name="all">همه</string>
    <string name="date">تاریخ</string>
    <string name="end">تا</string>
    <string name="from">از</string>
    <string name="all_items">همه موارد</string>
    <string name="all_mane">همه موانع</string>
    <string name="all_mane_unread">قرائت نشده و موانع</string>
    <string name="there_is_no_images">تصویری برای بارگذاری وجود ندارد.</string>
    <string name="there_is_no_voices">فایل صوتی برای بارگذاری وجود ندارد.</string>
    <string name="error_update">به روزرسانی با خطا روبرو شد. مجددا تلاش کنید.</string>
    <string name="file_downloaded">فایل برنامه دانلود شد، به مدیریت فایل مراجعه کنید</string>
    <string name="pre_number">شماره پیشین</string>
    <string name="mega_byte">&#160;مگابایت</string>
    <string name="download_folder">Download</string>
    <string name="karbari">کاربری</string>
    <string name="submit_for_back">برای بازگشت، دکمه ثبت را فشار دهید.</string>
    <string name="postal_code">کد پستی</string>
    <string name="select_one">انتخاب کنید</string>
    <string name="insert_message">یک پیام نوشته یا ضبط شود.</string>
    <string name="visible_hide_keyboard">نمایش صفحه کلید</string>
    <string name="last_unread">آخرین قرائت</string>
    <string name="thank_you">همکار گرامی!\nخداقوت!</string>
    <string name="all_masir_bazdid">همه مسیرها بازدید شد.</string>
    <string name="this_feature_is_not_active">این ویژگی در این منطقه فعال نشده است.</string>
    <string name="dash">-</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="receive_information">دریافت اطلاعات</string>
    <string name="recording">در حال ضبط صدا…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dynamic_navigation">پیمایش پویا</string>
    <string name="none">هیچکدام</string>
    <string name="not_respond">پاسخی دریافت نشد.</string>
    <string name="error_overload">به علت حجم بالای درخواست، امکان پاسخ دهی وجود ندارد. مجددا تلاش کنید.</string>
    <string name="error_turn_off_proxy">از خاموش بودن پروکسی بر روی دستگاه خود اطمینان حاصل کنید.</string>
    <string name="sort_reading_type">مرتب سازی نزولی</string>
    <string name="verification_code">کد تایید دو مرحله ای</string>
</resources>