<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_navigation"
        android:title="@string/navigation"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_description"
        android:title="@string/description"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_location"
        android:title="@string/location_counter"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_last"
        android:title="@string/last_unread"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_report_forbid"
        android:title="@string/report_forbid"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_verification"
        android:title="@string/verification_code"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_keyboard"
        android:checkable="true"
        android:title="@string/visible_hide_keyboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:checkable="true"
        android:title="@string/sort_reading_type"
        app:showAsAction="never" />

</menu>