<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CounterPlaceActivity">

    <ImageView
        android:id="@+id/image_view_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/text_view_from_input"
        android:src="@drawable/img_location"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_view_from_input"
        style="@style/InputTitle"
        android:layout_above="@id/linear_layout_1"
        android:text="@string/distance_from_input" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_view_from_wall"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/edit_Text_2"
            style="@style/InputPlace"
            android:hint="@string/cm"
            android:nextFocusLeft="@+id/edit_Text_3"
            android:nextFocusRight="@+id/edit_Text_3"
            android:nextFocusUp="@+id/edit_Text_3"
            android:nextFocusDown="@+id/edit_Text_3"
            android:nextFocusForward="@+id/edit_Text_3"
            tools:ignore="Autofill" />

        <TextView
            style="@style/InputTitle"
            android:layout_width="wrap_content"
            android:text="@string/slash" />

        <EditText
            android:id="@+id/edit_Text_1"
            style="@style/InputPlace"
            android:hint="@string/meter"
            android:nextFocusLeft="@+id/edit_Text_2"
            android:nextFocusRight="@+id/edit_Text_2"
            android:nextFocusUp="@+id/edit_Text_2"
            android:nextFocusDown="@+id/edit_Text_2"
            android:nextFocusForward="@+id/edit_Text_2"
            tools:ignore="Autofill" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_from_wall"
        style="@style/InputTitle"
        android:layout_above="@id/linear_layout_2"
        android:text="@string/distance_from_left" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_submit"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp">

        <EditText
            android:id="@+id/edit_Text_4"
            style="@style/InputPlace"
            android:hint="@string/cm"
            tools:ignore="Autofill" />

        <TextView
            style="@style/InputTitle"
            android:layout_width="wrap_content"
            android:text="@string/slash" />

        <EditText
            android:id="@+id/edit_Text_3"
            style="@style/InputPlace"
            android:hint="@string/meter"
            android:nextFocusLeft="@+id/edit_Text_4"
            android:nextFocusRight="@+id/edit_Text_4"
            android:nextFocusUp="@+id/edit_Text_4"
            android:nextFocusDown="@+id/edit_Text_4"
            android:nextFocusForward="@+id/edit_Text_4"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        style="@style/ButtonWarning"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginTop="@dimen/medium_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:layout_marginBottom="@dimen/medium_dp"
        android:background="@drawable/border_yellow_1"
        android:text="@string/submit" />

</RelativeLayout>