<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.counter_reading.activities.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout_logo"
        android:layout_gravity="center"
        android:layout_margin="@dimen/large_dp"
        android:background="@drawable/border_white_1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/medium_dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/version" />

            <TextView
                android:id="@+id/textViewVersion"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/version_custom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/medium_dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/update_date" />

            <TextView
                android:id="@+id/textViewSize"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/date_custom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/medium_dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/design_by" />

            <TextView
                android:id="@+id/textViewDesign"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/team" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/medium_dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/website" />

            <TextView
                android:id="@+id/textViewSite"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/www_abfa_ir"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/medium_dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/sepehr_shamsaei" />

            <TextView
                android:id="@+id/textViewPossibility"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/medium_dp"
                android:text="@string/sepehr_phone" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_above="@+id/linear_layout_footer"
        android:layout_gravity="bottom"
        android:background="@drawable/img_logo"
        android:orientation="horizontal" />

    <include layout="@layout/footer" />
</RelativeLayout>