<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.counter_reading.activities.DownloadActivity">

    <LinearLayout
        android:id="@+id/linear_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="@dimen/small_dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/text_view_download_normal"
            style="@style/text_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_white_2"
            android:gravity="center"
            android:paddingTop="@dimen/medium_dp"
            android:paddingBottom="@dimen/medium_dp"
            android:text="@string/normal"
            android:textColor="@color/text_color_light" />

        <TextView
            android:id="@+id/text_view_download_retry"
            style="@style/text_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/medium_dp"
            android:paddingBottom="@dimen/medium_dp"
            android:text="@string/again"
            android:textColor="@color/text_color_light" />

        <TextView
            android:id="@+id/text_view_download_off"
            style="@style/text_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/medium_dp"
            android:paddingBottom="@dimen/medium_dp"
            android:text="@string/off_line"
            android:textColor="@color/text_color_light" />

        <TextView
            android:id="@+id/text_view_download_special"
            style="@style/text_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/medium_dp"
            android:paddingBottom="@dimen/medium_dp"
            android:text="@string/special"
            android:textColor="@color/text_color_light" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relative_layout_footer"
        android:layout_below="@id/linear_layout_header"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <include layout="@layout/footer" />
</RelativeLayout>